fix: Checks for valid position working